# joes-local-stt-stack

./: .gitignore  AGENTS.md  ANDROID_PORT_PLAN.md  README.md  ROLLING_TODOS.md  WORKING_MEMORY.md  android_bridge.py  config.toml  dictate.py  dictatectl.py  pyproject.toml  tray.py
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/joe/personalstt/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
profiles/: default.toml  mutable.toml  obsidian.toml  superfast.toml
scripts/: android_adb_reverse.fish  android_bridge_token.fish  android_build_debug.fish  android_install_debug.fish  env.fish  inject_text.fish  install_kde_hotkeys.fish  install_kde_toggle_shortcut.fish  live_strategy_harness.py  logs.fish  profile_default.fish  profile_obsidian.fish  ptt_cancel.fish  ptt_commit.fish  ptt_press.fish  ptt_press_debug.fish  ptt_press_fast.fish  ptt_press_profile.fish  ptt_press_rest.fish  ptt_press_system.fish  ptt_release_cancel.fish  ptt_release_commit.fish  ptt_start.fish  ptt_switch.fish  ptt_toggle.fish  ptt_toggle_commit.fish  restart_all.fish  run_daemon.fish  safe_test_clipboard.fish  set_input_target.fish  smoke_test.fish  start_all.fish  start_android_bridge_bg.fish  start_daemon_bg.fish  start_keyboard_dictation.sh  start_mouse_dictation_whisper_live.sh  start_tray_bg.fish  status_all.fish  stop_all.fish  stop_android_bridge.fish  (+10 more)
